third_party/move/language/move-compiler/tests/move_check/expansion/use_function_tparam_shadows.exp
warning[W09001]: unused alias
  ┌─ tests/move_check/expansion/use_function_tparam_shadows.move:7:17
  │
7 │     use 0x2::X::foo;
  │                 ^^^ Unused 'use' of alias 'foo'. Consider removing it

error[E03009]: unbound variable
   ┌─ tests/move_check/expansion/use_function_tparam_shadows.move:10:9
   │
10 │         foo()
   │         ^^^ Invalid function usage. Unbound variable 'foo'

